feat: add project showcases, localization and device filtering
